--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ websockets>=12.0
 
 # Data Validation & Configuration
 pydantic>=2.4.0
+pydantic-settings>=2.0.0
 python-dotenv>=1.0.0
 pyyaml>=6.0.1
 
